--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,8 @@ a {
 img {
     width: 300px;
     height: auto;
+    align-self: center;
+    margin-bottom: 1em;
 }
 
 /* Layout */
@@ -42,11 +44,11 @@ header {
     text-align: center;
     padding-bottom: .6em;
     border-bottom: 1px solid gray;
+    color: var(--white);
 }
 
 #navbar {
-    background: var(--secondary);
-    
+    background: var(--primary);
     flex: 30%;
     padding: 1em 0em;
     max-width: 250px;
@@ -55,6 +57,9 @@ header {
     height: 100vh;
 }
 
+#navbar ul {
+    border: 1px solid var(--primary);
+}
 #navbar ul li {
     display: flex;
     width: 100%;
@@ -77,11 +82,38 @@ header {
 /* Main Doc */
 
 #main-doc {
-    background: lightseagreen;
     width: 70%;
     flex: 70%;
     padding: 1em .6em;
     margin-left: 220px;
+}
+
+/* Section */
+
+.main-section {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid var(--primary);
+    background: var(--secondary);
+    margin: 1em 0em;
+    padding: 1em;
+    border-radius: .2em;
+}
+
+.main-section:first-child {
+    margin-top: 0em;
+}
+
+.main-section > header, .main-section > p {
+    margin-bottom: .5em;
+}
+
+code {
+    display: block;
+    padding: .6em;
+    border: 1px solid var(--primary);
+    background: var(--white);
+    margin-bottom: 1em;
 }
 
 @media (max-width: 700px) {
@@ -105,11 +137,10 @@ header {
     }
 
     #main-doc {
-        background: lightseagreen;
         width: 100%;
         flex: 100%;
         padding: .6em .4em;
-        margin-top:100px;
+        margin-top: 100px;
         margin-left: 0px;
     }
 }
